<resources>
    <string name="app_name">AIdde</string>
    <string name="ef_done">Crear PDF</string>
    <string name="ef_selected_with_limit">%1$d/%2$d Seleccionados</string>
    <string name="ef_selected">%d Archivos</string>
    <string name="api_gcm_key">AIzaSyC3xGzO_qZo1Vu_j3XgRkzaivrmgftLrKg</string>
    <string name="dialog_update_titulo_actualizar">Actualizar Versión</string>
    <string name="dialog_update_content_actualizar">La versión actual está obsoleta ¿Desea actualizarla?</string>
    <string name="dialog_update_positive_actualizar">Actualizar</string>
    <string name="dialog_update_negative_actualizar">Cancelar</string>
    <string name="dialog_update_play_store">market://details?id=com.example.android</string>
    <string name="general_sin_conexion_servidor">Por favor intente nuevamente..</string>
    <string name="general_sin_conexion">No hay conexión a internet</string>
    <string name="general_sesion_finalizada">Su sesión ha finalizado</string>
    <string name="general_dialogo_titulo">AIdde</string>
    <string name="general_dialogo_btn_ok">Ok </string>
    <string name="general_permisos_insuficientes">¡Permisos insuficientes! </string>
    <string name="general_dialogo_salir">¿ Realmente deseas salir ?</string>
    <string name="general_dialogo_btn_salir">Salir</string>
    <string name="general_dialogo_btn_cancelar">Cancelar</string>
    <string name="general_dialogo_btn_volver">Volver</string>
    <string name="general_dialogo_btn_eliminar">Eliminar</string>
    <string name="general_dialogo_btn_confirmar">Confirmar</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="update_snackbar_content">Actualizando bases de datos...</string>
    <string name="activity_login_str_email">Correo electrónico</string>
    <string name="activity_login_str_pass">Contraseña</string>
    <string name="activity_login_str_requerido">Correo y Contraseña requeridos</string>
    <string name="activity_login_str_ingresar">Login</string>
    <string name="activity_login_str_actualizar">Actualizar Versión</string>
    <string name="activity_login_str_error">Correo y/o contraseña incorrecta !</string>
    <string name="activity_login_str_usuario_no_registrado">Usuario no registrado!</string>
    <string name="activity_login_str_progress_conten">Iniciando Sesión ...</string>
    <string name="activity_login_str_registro">Registrate !!</string>
    <string name="activity_login_str_recuperar"> ¿Olvido su contraseña?</string>
    <string name="activity_login_str_valido_email">El correo electrónico no es válido</string>
    <string name="activity_login_str_progress_recuperacion">Recuperando ...</string>
    <string name="activity_login_str_dialogo_cuenta_sin_validar">Su cuenta aun no esta activada. Hemos reenviado a su correo el link para poder activarla.</string>
    <string name="activity_login_str_dialogo_error"> Correo y/o contraseña incorrectos !.</string>
    <string name="activity_login_str_dialogo_recuperar_exito">Hemos enviado un link a tu correo , con el cual podrás restablecer tu clave.</string>
    <string name="activity_login_str_dialogo_recuperar_error"> El correo no esta registrado en el sistema.</string>
    <string name="menu_item_str_exit">Salir</string>
    <string name="menu_group_str_otras_opciones">Otras Opciones </string>
    <string name="menu_item_str_perfil">Perfil</string>
    <string name="menu_group_str_dependiente">Dependencia Judicial</string>
    <string name="menu_item_str_servicios_disponibles">Servicios Disponibles</string>
    <string name="menu_item_str_servicios_aceptados">Servicios Aceptados</string>
    <string name="menu_item_str_servicios_historial">Historial de Servicios</string>
    <string name="activity_registro_str_bar_title">Regístrate !!</string>
    <string name="activity_registro_str_email">Correo electrónico</string>
    <string name="activity_registro_str_pass">Contraseña</string>
    <string name="activity_registro_str_primer_nombre">Primer Nombre</string>
    <string name="activity_registro_str_segundo_nombre">Segundo Nombre</string>
    <string name="activity_registro_str_primer_apellido">Primer Apellido</string>
    <string name="activity_registro_str_segundo_apellido">Segundo Apellido</string>
    <string name="activity_registro_str_crear_cuenta">Crear Cuenta</string>
    <string name="activity_registro_str_obligatorio_identificacion">La identificación es obligatoria</string>
    <string name="activity_registro_str_obligatorio_celular">La número de celular es obligatorio</string>
    <string name="activity_registro_str_obligatorio_email">El correo electrónico es obligatorio</string>
    <string name="activity_registro_str_valido_email">El correo electrónico no es válido</string>
    <string name="activity_registro_str_valido_pass">La contraseña debe tener mínimo 8 caracteres, mayúsculas y números</string>
    <string name="activity_registro_str_obligatorio_pass">La contraseña es obligatorio</string>
    <string name="activity_registro_str_obligatorio_primer_nombre">El primer nombre es obligatorio</string>
    <string name="activity_registro_str_obligatorio_primer_apellido">El primer apellido es obligatorio</string>
    <string name="activity_registro_str_identificacion">Documento de identificación</string>
    <string name="activity_registro_str_tipo_identificacion">Tipo Identificación</string>
    <string name="activity_registro_str_titulo_inf_persona">Información Personal</string>
    <string name="activity_registro_str_titulo_inf_ubicacion">Ubicación</string>
    <string name="activity_registro_str_pais">País</string>
    <string name="activity_registro_str_departamento">Departamento</string>
    <string name="activity_registro_str_ciudad">Ciudad</string>
    <string name="activity_registro_str_datos_obligatorios">Datos obligatorios faltantes</string>
    <string name="activity_registro_str_sin_ciudad">Debe seleccionar al menos una ciudad</string>
    <string name="fragment_perfil_str_sin_ciudad">Debe seleccionar al menos una ciudad</string>
    <string name="activity_registro_str_ciudades_seleccionadas">Ciudades seleccionadas</string>
    <string name="activity_registro_str_tarjeta_profesional">Tarjeta Profesional</string>
    <string name="activity_registro_str_fecha_ext_doc">Fecha de Exp Documento</string>
    <string name="activity_registro_str_celular">Celular</string>
    <string name="activity_registro_str_progress_registro">Creando  Cuenta...</string>
    <string name="activity_registro_str_dialogo_cuenta_creada">Su cuenta fue creada con éxito. Enviaremos un correo electrónico para que sea activada.</string>
    <string name="activity_registro_str_dialogo_cuenta_sin_validar">Ya existe una cuenta registrada con este correo electrónico pero no esta activada. Hemos reenviado a su correo un link para su activación.</string>
    <string name="activity_registro_str_dialogo_cuenta_validada">  Ya exite una cuenta con este correo electrónico.</string>
    <string name="dialog_recuperar_pass_str_email">Correo electrónico</string>
    <string name="dialog_recuperar_pass_str_recuperar">Recuperar contraseña</string>
    <string name="fragment_perfil_str_titulo_general">General</string>
    <string name="fragment_perfil_str_bar_title">Perfil</string>
    <string name="fragment_perfil_str_tipo_usuario">Tipo Usuario</string>
    <string name="fragment_perfil_str_progress_actualizar_">Actualizando información ... </string>
    <string name="fragment_perfil_str_btn_actualizar">Actualizar</string>
    <string name="fragment_perfil_str_dialogo_actualizacion_ok">Información actualizada con éxito</string>
    <string name="fragment_perfil_str_titulo_archivos">Archivos</string>
    <string name="fragment_perfil_switch_str_off">Off</string>
    <string name="fragment_perfil_switch_str_on">On</string>
    <string name="fragment_perfil_str_archivos">Transferencia de archivos / documentos / imagenes solo via WIFI</string>
    <string name="fragment_perfil_str_ubicacion">Ubicación</string>
    <string name="fragment_perfil_str_pais">País</string>
    <string name="fragment_perfil_str_departamento">Departamento</string>
    <string name="fragment_perfil_str_ciudad">Ciudad</string>
    <string name="fragment_perfil_str_ciudades_seleccionadas">Ciudades seleccionadas</string>
    <string name="fragment_servicios_disponibles_str_bar_title">Servicios Disponibles</string>
    <string name="fragment_servicios_disponibles_str_progress_aceptacion">Aceptando Solicitud...</string>
    <string name="fragment_servicios_disponibles_str_no_solicitudes">No tienes solicitudes disponibles por el momento</string>
    <string name="fragment_servicios_disponibles_str_aceptacion">En un momento te confirmaremos si el servicio te fue asignado !</string>
    <string name="fragment_servicios_disponibles_str_solicitud_no_valida">La solicitud ya fue asignada !</string>
    <string name="fragment_servicios_aceptados_str_bar_title">Servicios Aceptados</string>
    <string name="fragment_servicios_aceptados_str_no_aceptados">No tienes solicitudes asignadas por el momento</string>
    <string name="fragment_historial_servicios_str_bar_title">Historial de Servicios</string>
    <string name="fragment_historial_servicios_str_no_solicitudes">No tienes solicitudes en tu historial</string>
    <string name="item_servicios_disponibles_str_ciudad">Chia</string>
    <string name="item_servicios_disponibles_str_despacho">DESPACHO 000 TRIBUNAL ADMINISTRATIVO DE CUNDINAMARCA - SECCION TERCERA</string>
    <string name="item_servicios_disponibles_str_numero_proceso">11001 03 27 001 2017 20000 11</string>
    <string name="item_servicios_disponibles_str_atender_servicio">Tomar Servicio</string>
    <string name="item_servicios_disponibles_str_detalle">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500</string>
    <string name="item_servicios_disponibles_str_tipo_servicio">Tipo Servicio</string>
    <string name="item_servicios_disponibles_str_fecha">10/10/2017</string>
    <string name="item_servicios_disponibles_str_titulo_detalle">Descripción</string>
    <string name="item_servicios_disponibles_str_titulo_tiempo_servicio">Tiempo del Servicio</string>
    <string name="item_servicios_aceptados_str_ciudad">Chia</string>
    <string name="item_servicios_aceptados_str_despacho">DESPACHO 000 TRIBUNAL ADMINISTRATIVO DE CUNDINAMARCA - SECCION TERCERA</string>
    <string name="item_servicios_aceptados_str_numero_proceso">11001 03 27 001 2017 20000 11</string>
    <string name="activity_gestionar_solicitud_str_adjuntar_archivo">Adjuntar Archivo</string>
    <string name="activity_gestionar_solicitud_str_cumplido">Cumplir</string>
    <string name="activity_gestionar_solicitud_str_cancelar">Cancelar</string>
    <string name="activity_gestionar_solicitud_str_no_archivos">No hay archivos adjuntos</string>
    <string name="fragment_crear_solicitud_str_titulo_ubicacion">Ubicación</string>
    <string name="fragment_crear_solicitud_str_pais">País</string>
    <string name="fragment_crear_solicitud_str_departamento">Departamento</string>
    <string name="fragment_crear_solicitud_str_ciudad">Ciudad</string>
    <string name="fragment_crear_solicitud_str_entidad">Entidad</string>
    <string name="fragment_crear_solicitud_str_titulo_procesal">Procesal</string>
    <string name="fragment_crear_solicitud_str_proceso">Proceso</string>
    <string name="fragment_crear_solicitud_str_solicitud">Solicitud</string>
    <string name="fragment_crear_solicitud_str_proceso_ciudad">Ciudad</string>
    <string name="fragment_crear_solicitud_str_despacho">Despacho</string>
    <string name="fragment_crear_solicitud_str_hint_descripcion">Descripcion de la solicitud ...</string>
    <string name="fragment_crear_solicitud_str_hint_num_proceso">xxxxxxxxxxxxxxxxxxxxxxx</string>
</resources>