<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants"
    tools:context="com.slt.dependenciajudicial.views.fragments.FragmentCrearSolicitud">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/tool_bar" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/fragment_crear_solicitud_nsv_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin"
        android:paddingHorizontal="@dimen/activity_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!--  Titulo de Archivos -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fragment_crear_solicitud_dimen_divider_margin"
                android:layout_marginTop="@dimen/fragment_crear_solicitud_dimen_divider_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_crear_solicitud_str_titulo_ubicacion"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/general_dimen_font_size_titulo"
                    android:textStyle="bold" />

            </LinearLayout>

            <!-- Separador -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_crear_solicitud_dimen_divider_height"
                android:layout_marginBottom="@dimen/fragment_crear_solicitud_dimen_divider_margin"
                android:layout_marginTop="@dimen/fragment_crear_solicitud_dimen_divider_margin"
                android:background="?android:dividerHorizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_margin"
                android:text="@string/fragment_crear_solicitud_str_pais" />

            <Spinner
                android:id="@+id/fragment_crear_solicitud_ddl_pais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/view_margin"
                android:layout_marginTop="@dimen/view_margin"
                android:background="@drawable/bg_dropdown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_margin"
                android:text="@string/fragment_crear_solicitud_str_departamento" />

            <Spinner
                android:id="@+id/fragment_crear_solicitud_ddl_departamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/view_margin"
                android:layout_marginTop="@dimen/view_margin"
                android:background="@drawable/bg_dropdown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_margin"
                android:text="@string/fragment_crear_solicitud_str_ciudad" />

            <Spinner
                android:id="@+id/fragment_crear_solicitud_ddl_ciudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/view_margin"
                android:layout_marginTop="@dimen/view_margin"
                android:background="@drawable/bg_dropdown" />


            <!-- Entidad -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_margin"
                android:text="@string/fragment_crear_solicitud_str_entidad" />

            <Spinner
                android:id="@+id/fragment_crear_solicitud_ddl_entidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/view_margin"
                android:layout_marginTop="@dimen/view_margin"
                android:background="@drawable/bg_dropdown" />

            <LinearLayout
                android:id="@+id/fragment_crear_solicitud_ly_rama_judicial_container"
                android:orientation="vertical"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <!--  Titulo de proceso -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/fragment_crear_solicitud_dimen_divider_margin"
                    android:layout_marginTop="@dimen/fragment_crear_solicitud_dimen_divider_margin">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_crear_solicitud_str_titulo_procesal"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/general_dimen_font_size_titulo"
                        android:textStyle="bold" />

                </LinearLayout>

                <!-- Separador -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fragment_crear_solicitud_dimen_divider_height"
                    android:layout_marginBottom="@dimen/fragment_crear_solicitud_dimen_divider_margin"
                    android:layout_marginTop="@dimen/fragment_crear_solicitud_dimen_divider_margin"
                    android:background="?android:dividerHorizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/view_margin"
                    android:text="@string/fragment_crear_solicitud_str_proceso_ciudad" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/fragment_crear_solicitud_edt_ciudad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:enabled="false"
                        android:background="@drawable/crear_solicitud_descripcion_edt"
                        android:inputType="textMultiLine"
                        android:singleLine="false"
                        android:minLines="1"
                        android:scrollHorizontally="false"
                        android:scrollbars="vertical"
                        android:lines="8"
                        android:textColor="@color/textColor" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/view_margin"
                    android:text="@string/fragment_crear_solicitud_str_despacho" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/view_margin"
                    android:text="@string/fragment_crear_solicitud_str_proceso" />

                <br.com.sapereaude.maskedEditText.MaskedEditText
                    android:id="@+id/fragment_crear_solicitud_edt_num_proceso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:background="@drawable/crear_solicitud_descripcion_edt"
                    android:gravity="center"
                    mask:allowed_chars="1234567890"
                    mask:mask="##### ## ## ### #### ##### ##"
                    android:hint="@string/fragment_crear_solicitud_str_hint_num_proceso"
                    app:keep_hint="true"
                    android:textColor="@color/textColor"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/view_margin"
                    android:text="@string/fragment_crear_solicitud_str_solicitud" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"

                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/fragment_crear_solicitud_edt_descripcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:background="@drawable/crear_solicitud_descripcion_edt"
                        android:hint="@string/fragment_crear_solicitud_str_hint_descripcion"
                        android:inputType="textMultiLine"
                        android:singleLine="false"
                        android:minLines="1"
                        android:scrollHorizontally="false"
                        android:scrollbars="vertical"
                        android:lines="8"
                        android:textColor="@color/textColor" />

                </android.support.design.widget.TextInputLayout>



            </LinearLayout>



        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
