<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.slt.dependenciajudicial.views.activity.ActivityLogin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/activity_login_imgv_prozess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:layout_marginBottom="24dp"
            android:layout_weight=".5"
            android:adjustViewBounds="false"
            android:contentDescription="@string/app_name"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:layout_weight=".5"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/activity_login_ly_edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/DependenciaJudicialEditTextError"
                    android:theme="@style/DependenciaJudicialEditText">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/activity_login_edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/activity_login_str_email"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/DependenciaJudicialEditText">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/activity_login_edt_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/activity_login_str_pass"
                        android:inputType="textPassword"
                        android:maxLines="1"

                        />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:orientation="vertical">


                <Button
                    android:id="@+id/activity_login_btn_ingresar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_action_user_login"
                    android:drawablePadding="-30dp"
                    android:drawableStart="@drawable/ic_action_user_login"
                    android:text="@string/activity_login_str_ingresar"
                    android:textColor="@color/textColorPrimary"
                    android:theme="@style/DependenciaJudicialButton" />

                <Button
                    android:id="@+id/activity_login_btn_registro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_action_user_add"
                    android:drawablePadding="-30dp"
                    android:drawableStart="@drawable/ic_action_user_add"
                    android:text="@string/activity_login_str_registro"
                    android:textColor="@color/textColorPrimary"
                    android:theme="@style/DependenciaJudicialButton" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/activity_login_txt_recuperar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:clickable="true"
                        android:text="@string/activity_login_str_recuperar"
                        android:layout_marginRight="@dimen/activity_margin"/>



                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>





